tests/integration/snapshots/integration__conformance__n_single_space.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
 
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:1:2
  |
1 |  
  |  ^
  |
help: insert a placeholder value
  |
1 |   "rust is a must"
  |
