tests/integration/snapshots/integration__conformance__n_string_1_surrogate_then_escape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\uD800\"]
stdout ---

stderr ---
error: expected closing quote
 --> stdin:1:11
  |
1 | ["\uD800\"]
  |  -        ^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | ["\uD800\"]"
  |            +
