tests/integration/snapshots/integration__conformance__n_string_1_surrogate_then_escape_u1.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\uD800\u1"]
stdout ---

stderr ---
error: expected hex digit 2 of 4 in escape, found `"`
 --> stdin:1:12
  |
1 | ["\uD800\u1"]
  |  -      -- ^
  |  |      |
  |  |      \u escape started here
  |  opening quote found here
